[project]
name = "competing-unsupervised-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.3.9",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.1",
    "kaleido==1.0.0rc0",
]
